<resources>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_not_detect">Cannot get IP Address of this device, please enable Wifi connection.</string>
    <string name="nfc_not_available">NFC is not available on this device.</string>
    <string name="sent_ip">Sent IP address to client successfullly.</string>
    <string name="device_list">Device list</string>
    <string name="device">Device</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="no_device">No device!</string>
    
    <string name="app_name">Handset Connection</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Handset Connection</string>
    <string name="app_heading">HANDSET \nConnection <sub>TM</sub></string>    
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send Pictures</string>
    <string name="send_voice">Send Voice</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client.</string>
    <string name="empty_message">If Wifi Direct is currently disabled, turn on from Android System Setting and then click button \"DISCOVER\" to view peer devices</string>
    <string name="p2p_off_warning">Enable P2P from system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">My Device</string>
    <string name="label_peers">Peer Devices</string>
	<string name="wifi_direct">Wifi Direct</string>
	<string name="nfc">NFC</string>
	
	<string name="send_file">Send File</string>
	<string name="start_voice">Start voice</string>
	<string name="stop_voice">Stop voice</string>
	<string name="app_desc">Turn your smartphone into a mobile telecom</string>
	
	<string name="buzzer">Buzzer</string>
	<string name="av_on_off">Audio Video On/Off</string>
	<string name="settings_menu">Settings Menu</string>
	<string name="connect_on_off">Connect On/Off</string>
	<string name="send_message">Send Message</string>
	<string name="exit">Exit</string>
	
	<string name="server_info">Server Info</string>
	
	<string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="client">Client</string>
    <string name="line1">In chrome or firefox type</string>
    <string name="line2">Or in VLC open</string>
    <string name="about_activity_title">About</string>
    <string name="client_activity_title">Client</string>
    <string name="options_activity_title">Settings</string>
    <string name="warning">Turn the wifi on and join a network !</string>
    <string name="streaming">Streaming !</string>
    <string name="stop_stream">Stop streaming</string>
    <string name="notification_title">Streaming</string>
    <string name="notification_content">Video streaming is running.</string>
    <string name="client0">Here you can play streams from another smartphone running Spydroid. Both smartphones obvioulsy have to be connected to the same wireless network !</string>
    
</resources>