<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="120dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/panel_bg"
        android:orientation="vertical"
        android:padding="10dip" >

        <Button
            android:id="@+id/btWifi"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dip"
            android:text="@string/connect_on_off" />

        <Button
            android:id="@+id/btExit"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dip"
            android:text="@string/exit" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/hx" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:background="@color/white"
        android:padding="3dp"
        android:text="@string/app_desc"
        android:textColor="@color/panel_bg" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="57dp"
        android:background="@color/time_bg"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>