<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0px"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <SurfaceView
        android:id="@+id/smallcameraview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btStop"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/stop_stream"
                android:padding="5dp"
                android:src="@drawable/stop" />

            <ImageView
                android:id="@+id/button_settings"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/options"
                android:padding="7dp"
                android:src="@drawable/settings" 
                android:visibility="gone"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/warning"
            android:visibility="gone"
            android:textColor="#DD1111" />

        <TextView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</FrameLayout>