<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_view"
    android:visibility="gone">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button"
                android:layout_marginRight="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="#eeeeee" />
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/disconnect_peer_button"
                android:background="#eeeeee"
                 />
            <Button
                android:id="@+id/btRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="Start Record"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="gone" android:background="#eeeeee"/>
            <Button
                android:id="@+id/btSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/send_message"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="gone" android:background="#eeeeee"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
			<Button
			       android:id="@+id/btn_start_client"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:layout_marginRight="5dp"
			       android:text="@string/get_file_button"
			       android:paddingLeft="5dp"
			       android:paddingRight="5dp"
			       android:visibility="gone" android:background="#eeeeee"/>
			
		</LinearLayout>	
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone" />
        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="50dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>
</FrameLayout>
